--- a/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
+++ b/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
@@ -170,8 +170,15 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ComprasController.cs" />
+    <Compile Include="Controllers\detalleComprasController.cs" />
+    <Compile Include="Controllers\DetalleFacturasController.cs" />
+    <Compile Include="Controllers\FacturasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\OrdenPagosController.cs" />
+    <Compile Include="Controllers\ProductosController.cs" />
+    <Compile Include="Controllers\ProveedoresController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -510,6 +517,41 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
+    <Content Include="Views\Proveedores\Create.cshtml" />
+    <Content Include="Views\Proveedores\Delete.cshtml" />
+    <Content Include="Views\Proveedores\Details.cshtml" />
+    <Content Include="Views\Proveedores\Edit.cshtml" />
+    <Content Include="Views\Proveedores\Index.cshtml" />
+    <Content Include="Views\Compras\Create.cshtml" />
+    <Content Include="Views\Compras\Delete.cshtml" />
+    <Content Include="Views\Compras\Details.cshtml" />
+    <Content Include="Views\Compras\Edit.cshtml" />
+    <Content Include="Views\Compras\Index.cshtml" />
+    <Content Include="Views\Productos\Create.cshtml" />
+    <Content Include="Views\Productos\Delete.cshtml" />
+    <Content Include="Views\Productos\Details.cshtml" />
+    <Content Include="Views\Productos\Edit.cshtml" />
+    <Content Include="Views\Productos\Index.cshtml" />
+    <Content Include="Views\detalleCompras\Create.cshtml" />
+    <Content Include="Views\detalleCompras\Delete.cshtml" />
+    <Content Include="Views\detalleCompras\Details.cshtml" />
+    <Content Include="Views\detalleCompras\Edit.cshtml" />
+    <Content Include="Views\detalleCompras\Index.cshtml" />
+    <Content Include="Views\Facturas\Create.cshtml" />
+    <Content Include="Views\Facturas\Delete.cshtml" />
+    <Content Include="Views\Facturas\Details.cshtml" />
+    <Content Include="Views\Facturas\Edit.cshtml" />
+    <Content Include="Views\Facturas\Index.cshtml" />
+    <Content Include="Views\DetalleFacturas\Create.cshtml" />
+    <Content Include="Views\DetalleFacturas\Delete.cshtml" />
+    <Content Include="Views\DetalleFacturas\Details.cshtml" />
+    <Content Include="Views\DetalleFacturas\Edit.cshtml" />
+    <Content Include="Views\DetalleFacturas\Index.cshtml" />
+    <Content Include="Views\OrdenPagos\Create.cshtml" />
+    <Content Include="Views\OrdenPagos\Delete.cshtml" />
+    <Content Include="Views\OrdenPagos\Details.cshtml" />
+    <Content Include="Views\OrdenPagos\Edit.cshtml" />
+    <Content Include="Views\OrdenPagos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
