--- a/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
+++ b/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
@@ -552,6 +552,8 @@
     <Content Include="Views\OrdenPagos\Details.cshtml" />
     <Content Include="Views\OrdenPagos\Edit.cshtml" />
     <Content Include="Views\OrdenPagos\Index.cshtml" />
+    <Content Include="Views\Home\homeAdmin.cshtml" />
+    <Content Include="Views\Home\sinPrivilegios.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
