--- a/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
+++ b/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
@@ -554,6 +554,9 @@
     <Content Include="Views\OrdenPagos\Index.cshtml" />
     <Content Include="Views\Home\homeAdmin.cshtml" />
     <Content Include="Views\Home\sinPrivilegios.cshtml" />
+    <Content Include="Views\Facturas\facturasPorPagar.cshtml" />
+    <Content Include="Views\Facturas\facturasPendientes.cshtml" />
+    <Content Include="Views\Facturas\facturasPagadas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
