Controller y vistas de ordenes de pagos modificados

--- a/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
+++ b/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
@@ -557,6 +557,8 @@
     <Content Include="Views\Facturas\facturasPorPagar.cshtml" />
     <Content Include="Views\Facturas\facturasPendientes.cshtml" />
     <Content Include="Views\Facturas\facturasPagadas.cshtml" />
+    <Content Include="Views\OrdenPagos\historialPagos.cshtml" />
+    <Content Include="Views\OrdenPagos\pagosPendientes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
