--- a/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
+++ b/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
@@ -559,6 +559,7 @@
     <Content Include="Views\Facturas\facturasPagadas.cshtml" />
     <Content Include="Views\OrdenPagos\historialPagos.cshtml" />
     <Content Include="Views\OrdenPagos\pagosPendientes.cshtml" />
+    <Content Include="Views\DetalleFacturas\DetallesFac.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
