--- a/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
+++ b/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
@@ -237,6 +237,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Views\Home\Class1.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
