--- a/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
+++ b/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
@@ -527,6 +527,68 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Finanzas.cshtml" />
+    <Content Include="Views\Compras\Create.cshtml" />
+    <Content Include="Views\Compras\Delete.cshtml" />
+    <Content Include="Views\Compras\Details.cshtml" />
+    <Content Include="Views\Compras\Edit.cshtml" />
+    <Content Include="Views\Compras\Finanzas.cshtml" />
+    <Content Include="Views\Compras\Index.cshtml" />
+    <Content Include="Views\detalleCompras\Create.cshtml" />
+    <Content Include="Views\detalleCompras\Delete.cshtml" />
+    <Content Include="Views\detalleCompras\Details.cshtml" />
+    <Content Include="Views\detalleCompras\Edit.cshtml" />
+    <Content Include="Views\detalleCompras\Index.cshtml" />
+    <Content Include="Views\DetalleProductoes\Create.cshtml" />
+    <Content Include="Views\DetalleProductoes\Delete.cshtml" />
+    <Content Include="Views\DetalleProductoes\Details.cshtml" />
+    <Content Include="Views\DetalleProductoes\Edit.cshtml" />
+    <Content Include="Views\DetalleProductoes\FinanzasProductos.cshtml" />
+    <Content Include="Views\DetalleProductoes\HistorialProductos.cshtml" />
+    <Content Include="Views\DetalleProductoes\Index.cshtml" />
+    <Content Include="Views\devolucions\Create.cshtml" />
+    <Content Include="Views\devolucions\Delete.cshtml" />
+    <Content Include="Views\devolucions\Details.cshtml" />
+    <Content Include="Views\devolucions\Edit.cshtml" />
+    <Content Include="Views\devolucions\Index.cshtml" />
+    <Content Include="Views\Facturas\Create.cshtml" />
+    <Content Include="Views\Facturas\Delete.cshtml" />
+    <Content Include="Views\Facturas\Details.cshtml" />
+    <Content Include="Views\Facturas\Edit.cshtml" />
+    <Content Include="Views\Facturas\Index.cshtml" />
+    <Content Include="Views\ofertas\Create.cshtml" />
+    <Content Include="Views\ofertas\Delete.cshtml" />
+    <Content Include="Views\ofertas\Details.cshtml" />
+    <Content Include="Views\ofertas\Edit.cshtml" />
+    <Content Include="Views\ofertas\FinanzasOfertas.cshtml" />
+    <Content Include="Views\ofertas\HistorialOfertas.cshtml" />
+    <Content Include="Views\ofertas\Index.cshtml" />
+    <Content Include="Views\ordenPagoes\Create.cshtml" />
+    <Content Include="Views\ordenPagoes\Delete.cshtml" />
+    <Content Include="Views\ordenPagoes\Details.cshtml" />
+    <Content Include="Views\ordenPagoes\Edit.cshtml" />
+    <Content Include="Views\ordenPagoes\FinanzasProveedores.cshtml" />
+    <Content Include="Views\ordenPagoes\HistorialProveedores.cshtml" />
+    <Content Include="Views\ordenPagoes\Index.cshtml" />
+    <Content Include="Views\presupuestoes\Create.cshtml" />
+    <Content Include="Views\presupuestoes\Delete.cshtml" />
+    <Content Include="Views\presupuestoes\Details.cshtml" />
+    <Content Include="Views\presupuestoes\Edit.cshtml" />
+    <Content Include="Views\presupuestoes\FinanzasCompras.cshtml" />
+    <Content Include="Views\presupuestoes\HistorialPresupuestos.cshtml" />
+    <Content Include="Views\presupuestoes\Index.cshtml" />
+    <Content Include="Views\Productos\Create.cshtml" />
+    <Content Include="Views\Productos\Delete.cshtml" />
+    <Content Include="Views\Productos\Details.cshtml" />
+    <Content Include="Views\Productos\Edit.cshtml" />
+    <Content Include="Views\Productos\FinanzasProductosAprobar.cshtml" />
+    <Content Include="Views\Productos\HistorialProductos.cshtml" />
+    <Content Include="Views\Productos\Index.cshtml" />
+    <Content Include="Views\Proveedores\Create.cshtml" />
+    <Content Include="Views\Proveedores\Delete.cshtml" />
+    <Content Include="Views\Proveedores\Details.cshtml" />
+    <Content Include="Views\Proveedores\Edit.cshtml" />
+    <Content Include="Views\Proveedores\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
