--- a/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
+++ b/ArbolesPlantas/ArbolesPlantas/ArbolesPlantas.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Views\Home\Class1.cs" />
     <Compile Include="Views\prueba.cs" />
+    <Compile Include="Views\prueba2.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
